--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "chat-room-server",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -9,7 +9,7 @@
     "fetch": "python ./images/fetch.py"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GNU GPLv3",
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
