--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "lint": "vue-cli-service lint",
     "deploy": "python deploy.py"
   },
-  "license": "GNU GPLv3",
+  "license": "GPL-3.0+",
   "dependencies": {
     "@heroicons/vue": "^1.0.1",
     "@tailwindcss/postcss7-compat": "^2.2.4",
